Rename anime .html to index .html

--- a/index .html
+++ b/index .html
@@ -157,7 +157,7 @@
   <div class="hero">
     <div>
       <h2>Anime Products From ?100</h2>
-      <p>Figures • Keychains • Posters • Stickers • Collectibles</p>
+      <p>Figures â€¢ Keychains â€¢ Posters â€¢ Stickers â€¢ Collectibles</p>
       <button onclick="document.getElementById('products').scrollIntoView()">Shop Now</button>
     </div>
   </div>
@@ -241,7 +241,7 @@
   </section>
 
   <footer>
-    © 2025 Fewgo Anime Products | Designed for Anime Lovers ??
+    Â© 2025 Fewgo Anime Products | Designed for Anime Lovers ??
   </footer>
 
   <!-- ADMIN PANEL -->
